Refactor project structure and enhance game functionality
- Updated wibblo.spec to include image assets for packaging.
- Modified build.sh to add data assets during the build process.
- Enhanced .vscode/settings.json to improve file exclusion and nesting patterns.
- Introduced to_snake_case.py script for file renaming consistency.
- Added INSTRUCTIONS.md for project guidelines and requirements.
- Implemented core game mechanics in main.py, including player controls and ECS architecture.
- Added various image assets for player animations and game environment.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,22 @@
 {
   "files.exclude": {
+    ".venv": true,
     ".vscode": false,
     "**/__pycache__": true,
-    ".mypy_cache": true
+    ".mypy_cache": true,
+    "build": true,
   },
   "search.exclude": {
+    ".venv": true,
     "**/__pycache__": true,
-    "**/.mypy_cache": true
+    "**/.mypy_cache": true,
+    "build": true
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "README.md": "CONTRIBUTING.md, SECURITY.md, LICENSE"
+    "README.md": "CONTRIBUTING.md, SECURITY.md, LICENSE, README.*",
+    "wibblo.spec": "requirements.txt, .flake8, .gitignore"
   },
   "files.associations": {
     "**/*.md": "markdown"
@@ -25,7 +30,7 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.codeActionsOnSave": {
       "source.organizeImports": "explicit"
-    }
+    },
   },
   "isort.args": [
     "--profile",
