--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
     "README.md": "CONTRIBUTING.md, SECURITY.md, LICENSE, README.*",
-    "wibblo.spec": "requirements.txt, .flake8, .gitignore"
+    "pyproject.toml": "wibblo.spec, requirements.txt, .flake8, .gitignore"
   },
   "files.associations": {
     "**/*.md": "markdown"
