Add game features and improve project structure
- Introduced PLAN_B.md outlining future game features including enemies, music, sound effects, menu, HUD, and game over screen.
- Updated pyproject.toml to reflect a new versioning scheme.
- Enhanced README.md with additional game details and installation instructions in Portuguese.
- Removed outdated README.pt-BR.md and various project documentation files to streamline the project structure.
- Added footstep sound effects and music tracks to enhance gameplay experience.
- Implemented a FootstepSystem in main.py for dynamic footstep sounds during player movement.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
     "README.md": "CONTRIBUTING.md, SECURITY.md, LICENSE, README.*",
-    "pyproject.toml": "wibblo.spec, requirements.txt, .flake8, .gitignore"
+    "pyproject.toml": "wibblo.spec, requirements.txt, .gitignore, setup.cfg"
   },
   "files.associations": {
     "**/*.md": "markdown"
