Update project assets and enhance gameplay mechanics
- Changed asset path in pyproject.toml to reference the distribution directory.
- Added a video demonstration of gameplay in README.md.
- Improved installation instructions for the Wibblo prototype.
- Updated wibblo.spec to include additional data assets for sounds and fonts.
- Introduced a new CombatSystem in main.py to handle player-enemy interactions and combat mechanics.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ env = "GIT_COMMIT_AUTHOR"
 default = "semantic-release <semantic-release>"
 
 # github
-assets = ["build/wibblo"]
+assets = ["./dist/wibblo"]
 [tool.semantic_release.remote]
 type = "github"
 ignore_token_for_push = false
